Fixed #2
Fixed shadow overlaps dropdown menu

--- a/imcger/collapsequote/styles/all/template/quote.css
+++ b/imcger/collapsequote/styles/all/template/quote.css
@@ -18,10 +18,10 @@
 	display: none;
 	position: relative;
 	text-align: center;
-	z-index: 999;
+	z-index: 1;
 }
 
 blockquote cite, .uncited::before {
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
